# rust_fullstack_template

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  clean_db.sh  compile_themes.sh  dev.sh  export_themes.sh  logs.sh  rustfmt.toml  setup.sh  setup_db.sh
cli/: Cargo.toml  README.md
cli/src/: etsy.rs  main.rs  printful.rs
client/: Cargo.toml  README.md  Trunk.toml  index.html  input.css  tailwind.config.js
client/src/: api.rs  lib.rs  theme.rs
client/src/components/: mod.rs  todo_form.rs  todo_item.rs  todo_list.rs
client/src/components/ui/: alert.rs  avatar.rs  badge.rs  breadcrumbs.rs  button.rs  card.rs  data_table.rs  divider.rs  dropdown.rs  input.rs  mod.rs  modal.rs  pagination.rs  progress.rs  sidenav.rs  spinner.rs  table.rs  tabs.rs  theme_toggle.rs
client/src/pages/: admin_todos.rs  component_showcase.rs  home.rs  mod.rs  settings_theme.rs
core/: Cargo.toml
core/src/: component_settings.rs  lib.rs  themes.rs  todo.rs
docs/: COMPONENTS.md  COMPONENT_LIBRARY.md  README.md  SETUP.md  THEMES.md  claude.md
platform/api/: Cargo.toml  README.md  env.example
platform/api/migrations/: 20240101000000_create_todos_table.sql  20240102000000_create_todo_status_enum.sql  20240103000000_create_component_settings.sql  20240104000000_add_theme_mode.sql  20240105000000_create_themes_system.sql
platform/api/src/: config.rs  db.rs  error.rs  main.rs  routes.rs
platform/api/src/handlers/: component_settings.rs  mod.rs  themes.rs  todos.rs
themes/: README.md  dark.json  light.json
