[package]
name = "client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
platform-core = { path = "../core" }

# Leptos framework
leptos.workspace = true
leptos_router.workspace = true
leptos_meta.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

# WASM
wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "CssStyleDeclaration", "Storage", "Location"] }

# HTTP client
gloo-net.workspace = true
