[package]
name = "platform-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

# Optional: SQLx support for database types
sqlx = { workspace = true, optional = true }

[features]
default = []
sqlx = ["dep:sqlx"]
