[package]
name = "platform-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
platform-core = { path = "../../core", features = ["sqlx"] }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
sqlx.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

